--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo Calendar PWA</title>
+    <title>Today</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Todo Calendar">
+    <meta name="apple-mobile-web-app-title" content="Today">
 </head>
 <body>
     <div class="app-container">
         <header>
-            <h1>Todo Calendar</h1>
+            <h1>Today</h1>
         </header>
         
         <main>
